--- a/VerifyingSignatures.html
+++ b/VerifyingSignatures.html
@@ -15,7 +15,7 @@
 <pre class="wiki"><code>pub   4096R/36879494 2010-04-01
       Key fingerprint = 427F 11FD 0FAA 4B08 0123  F01C DDFA 1A3E 3687 9494
 uid   Qubes Master Signing Key</code></pre>
-<p>There should also be a copy of this key at the project's main website, as well as in the <a href="https://groups.google.com/forum/#!msg/qubes-devel/RqR9WPxICwg/kaQwknZPDHkJ">​archives of the project's mailing list</a>.</p>
+<p>There should also be a copy of this key at the project's main website, as well as in the archives of the project's <a href="https://groups.google.com/forum/#!msg/qubes-devel/RqR9WPxICwg/kaQwknZPDHkJ">​developer</a> and <a href="https://groups.google.com/d/msg/qubes-users/CLnB5uFu_YQ/ZjObBpz0S9UJ">​user</a> mailing lists.</p>
 <p>Once you have downloaded and verified the fingerprint of the Master Signing Key, you should import this key and set its trust level to &quot;ultimate&quot; (oh, well), so that it can be used to automatically verify all the developers' keys:</p>
 <pre class="wiki"><code>gpg --edit-key 0x36879494
 and then: trust, 5, y, q</code></pre>
