--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -1,7 +1,8 @@
 <h1 id="QubesDownloads">Qubes Downloads</h1>
 <ul>
-<li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
-<li><a href="/wiki/wiki/HCL">Hardware Compatibility List (covers all Qubes releases)</a></li>
+<li><a href="/wiki/wiki/SystemRequirements">System Requirements</a></li>
+<li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
+<li><a href="/wiki/wiki/VerifyingSignatures">On Digital Signatures and How to Verify Qubes Downloads</a></li>
 </ul>
 <h2 id="QubesRelease2">Qubes Release 2</h2>
 <ul>
