--- a/HCL.html
+++ b/HCL.html
@@ -1,4 +1,4 @@
-<h1 id="HardwareCompatibilityListforAllQubesOSReleases">Hardware Compatibility List for All Qubes OS Releases</h1>
+<h1 id="HardwareCompatibilityListHCLforAllQubesOSReleases">Hardware Compatibility List (HCL) for All Qubes OS Releases</h1>
 <p><strong>Device</strong></p>
 <p><strong>Qubes R1</strong></p>
 <p><strong>Qubes R2 Beta2</strong></p>
