--- a/QubesLists.html
+++ b/QubesLists.html
@@ -1,54 +1,67 @@
 <h1 id="QubesMailingLists">Qubes Mailing Lists</h1>
-<p>Please send all the questions regarding Qubes to one of the following mailing lists. Please do <strong>not</strong> send questions to individual Qubes developers. By sending a message to list, you not only give other a chance to help you, but you also might help others by making the discussion public.</p>
-<h2 id="Thequbes-usersmailinglist">The <code>qubes-users</code> mailing list</h2>
-<p>This list is for helping users solve various daily problems with Qubes OS. Example of topics or questions suitable for this list:</p>
+<p>Please send all the questions regarding Qubes to one of the following mailing lists. <strong>Please do not send questions to individual Qubes developers.</strong> By sending a message to the appropriate mailing list, you are not only giving others a chance to help you, but you may also be helping others by starting a public discussion about a shared problem or interest.</p>
+<h2 id="Thequbes-usersMailingList">The <code>qubes-users</code> Mailing List</h2>
+<h3 id="HowtoUseThisList">How to Use This List</h3>
+<p>This list is for helping users solve various daily problems with Qubes OS. Examples of topics or questions suitable for this list include:</p>
 <ul>
-<li>Installation problems</li>
-<li>Hardware compatibility problems</li>
-<li>How do I do...?</li>
-<li>HCL reports</li>
+<li><a href="/wiki/wiki/HCL#GeneratingandSubmittingNewReports">HCL reports</a>.</li>
+<li>Installation problems.</li>
+<li>Hardware compatibility problems.</li>
+<li>How do I...?</li>
 </ul>
-<p>You don't need to subscribe to post to this list. However, subscribing might still be a good idea, because: 1) you make sure your message will not be eaten by the Google Groups spam filter, and 2) you will get other messages direct to the list.</p>
-<p>Please consult the basic documentation before posting to the list:</p>
+<h3 id="ReadTheseFirst">Read These First</h3>
+<p>Please try searching both the Qubes website and the archives of the mailing lists before sending a question. In addition, please make sure that you have read and understood the following basic documentation prior to posting to the list:</p>
 <ul>
-<li><a href="/wiki/wiki/QubesDownloads">Installation guides and HCL</a> &lt;-- for problems related to Qubes OS installation</li>
-<li><a href="/wiki/wiki/UserFaq">Qubes User's FAQ</a></li>
-<li><a href="/wiki/wiki/UserDoc">Qubes User Guides</a> &lt;-- for question on how to use Qubes OS</li>
+<li><a href="/wiki/wiki/QubesDownloads">Installation guides, System Requirements, and HCL</a> &lt;-- for problems related to Qubes OS installation</li>
+<li><a href="/wiki/wiki/UserFaq">Qubes User FAQ</a></li>
+<li><a href="/wiki/wiki/UserDoc">Qubes User Guides</a> &lt;-- for questions about how to use Qubes OS</li>
 </ul>
-<p>Posting, Subscribing, etc:</p>
+<h3 id="HowtoSubscribeandPost">How to Subscribe and Post</h3>
+<p>You don't have to subscribe in order to post to this list. However, subscribing might nonetheless be desirable, as it ensures that your messages will not be eaten by the Google Groups spam filter and allows you to receive messages which were sent directly to the list.</p>
 <ul>
-<li>To post a message to the list, just send an email to (you don't need to be subscribed): <code>qubes-users@googlegroups.com</code></li>
-<li>To subscribe to the list, send an empty mail to (you don't need a gmail account for that!): <code>qubes-users+subscribe@googlegroups.com</code></li>
-<li>To unsubscribe, send an empty mail to <code>qubes-users+unsubscribe@googlegroups.com</code></li>
-<li>The Web interface of the list: <a href="http://groups.google.com/group/qubes-users">​http://groups.google.com/group/qubes-users</a></li>
+<li>To subscribe to the list, send a blank mail to <code>qubes-users+subscribe@googlegroups.com</code>. (Note: A Gmail account is not required. Any email address should work.)</li>
+<li>To post a message to the list, address your email to <code>qubes-users@googlegroups.com</code>. (Note: You don't have to be subscribed in order to post.)</li>
+<li>To unsubscribe, send a blank email to <code>qubes-users+unsubscribe@googlegroups.com</code>.</li>
+<li>This list has a Google Groups web interface: <a href="https://groups.google.com/group/qubes-users">​https://groups.google.com/group/qubes-users</a>
+<ul>
+<li>Some users prefer to interact with the mailing list through the Google Groups web interface. This has the advantage that it allows you to search and reply to messages which were sent prior to your subscription to the list. However, a Google account is required in order to post through this interface.</li>
+</ul></li>
 </ul>
 <h2 id="Thequbes-develmailinglist">The <code>qubes-devel</code> mailing list</h2>
-<p>This list is mainly for people interested in contributing to Qubes OS, or just willing to learn more about its architecture and implementation. Example of topics and questions suitable for this list:</p>
+<h3 id="HowtoUseThisList1">How to Use This List</h3>
+<p>This list is primarily intended for people who are interested in contributing to Qubes OS or who are willing to learn more about its architecture and implementation. Examples of topics and questions suitable for this list include:</p>
 <ul>
-<li>Questions about why we made certain architecture or implementation decisions to implement XYZ this way and not the other way?</li>
-<li>Questions about code layout and where is code for certain functionality</li>
-<li>&quot;I would like to implement feature XYZ....&quot; -- discussions about proposed new features, patches, etc.</li>
-<li>Contributed code and patches</li>
-<li>Some more or less generic security discussions, somehow relating to Qubes OS</li>
+<li>Questions about why we made certain architecture or implementation decisions. (&quot;Why did you implement XYZ this way and not the other way?&quot;)</li>
+<li>Questions about code layout and where is code for certain functionality.</li>
+<li>Discussions about proposed new features, patches, etc. (&quot;I would like to implement feature XYZ.&quot;)</li>
+<li>Contributed code and patches.</li>
+<li>Security discussions which are relevant to Qubes in some way.</li>
 </ul>
-<p>You need to be subscribed in order to post to this list.</p>
-<p>Posting, Subscribing, etc:</p>
+<h3 id="HowtoSubscribeandPost1">How to Subscribe and Post</h3>
+<p>You must be subscribed in order to post to this list.</p>
 <ul>
-<li>To post a message to the list, send an email to (you need to be subscribed first!): <code>qubes-devel@googlegroups.com</code></li>
-<li>To subscribe to the list, send an empty mail to (you don't need a gmail account for that!): <code>qubes-devel+subscribe@googlegroups.com</code></li>
-<li>To unsubscribe, send an empty mail to <code>qubes-devel+unsubscribe@googlegroups.com</code></li>
-<li>The Web interface of the list: <a href="http://groups.google.com/group/qubes-devel">​http://groups.google.com/group/qubes-devel</a></li>
+<li>To subscribe to the list, send a blank mail to <code>qubes-devel+subscribe@googlegroups.com</code>. (Note: A Gmail account is not required. Any email address should work.)</li>
+<li>To post a message to the list, address your email to <code>qubes-devel@googlegroups.com</code>. (Note: You must be subscribed in order to post. If your post does not appear, please allow time for moderation to occur.)</li>
+<li>To unsubscribe, send a blank email to <code>qubes-devel+unsubscribe@googlegroups.com</code>.</li>
+<li>This list has a Google Groups web interface: <a href="https://groups.google.com/group/qubes-devel">​https://groups.google.com/group/qubes-devel</a>
+<ul>
+<li>Some users prefer to interact with the mailing list through the Google Groups web interface. This has the advantage that it allows you to search and reply to messages which were sent prior to your subscription to the list. However, a Google account is required in order to post through this interface.</li>
+</ul></li>
 </ul>
-<h2 id="Generalhintsandguidelinesregardingpostingtothelists">General hints and guidelines regarding posting to the lists</h2>
+<h2 id="GeneralPostingAdvice">General Posting Advice</h2>
 <ul>
-<li>Use an informative and precise subject in your message. This will allow others to easily find your thread in the future and use it as a reference. Example of a bad subject: &quot;Help! Qubes problems!&quot;. Example of a good subject: &quot;R2B2 Installation problem: Apple keyboard not working in installer&quot;.</li>
+<li>Include a precise and informative subject line. This will allow others to easily find your thread in the future and use it as a reference.
+<ul>
+<li>Example of a bad subject: &quot;Help! Qubes problems!&quot;</li>
+<li>Example of a good subject: &quot;R2B2 Installation problem: Apple keyboard not working in installer.&quot;</li>
+</ul></li>
 </ul>
 <ul>
-<li>Be precise and concrete. Do not write an essay, only the essential informations that are needed. Qubes developers are Very Busy People (VBP) and we'd really better spend our time on improving Qubes, rather than reading essays!</li>
+<li>Be concise. Do not write an essay. Include only the essential information. Qubes developers are Very Busy People (VBP), and we'd really rather spend our time improving Qubes than reading essays!</li>
 </ul>
 <ul>
-<li>Do not sorry about your English. Really, nobody gives a damn, whether you're sorry, or not, that your English sucks. If we can't understand you, we will ask (or ignore your message if it's a total mess ;) And, if you really are so ashamed of your written English, then... just learn it, instead of sorry everybody.</li>
+<li>Do not apologize for your English. This is a waste of everyone's time, including your own. If we can't understand you, we will ask you to clarify (or ignore your message if it's a total mess ;).</li>
 </ul>
 <ul>
-<li>While we're generally open to hear suggestions of new features, please note that we already have a pretty well defined Roadmap, and it's rather unlikely we will change our schedule in order to accommodate your request. Much more preferred way to get new features into Qubes, those requested by users, is to... contribute code to Qubes that implements them, which we will happily accept, provided it meets our standards. It's always good to first discuss such ideas on the qubes-devel list, before starting the work though.</li>
+<li>While we're generally open to hearing suggestions for new features, please note that we already have a pretty well defined <a href="/wiki/trac/roadmap">roadmap</a>, and it's rather unlikely that we will change our schedule in order to accommodate your request. If there's a particular feature you'd like to see in Qubes, a much more effective way to make it happen is to... contribute code to Qubes which implements it! We happily accept such contributions, provided they meet our standards. Please note, however, that it's always a good idea to field a discussion of your idea on the qubes-devel list before putting in a lot of hard work on something that we may not be able or willing to accept.</li>
 </ul>
