--- a/UserFaq.html
+++ b/UserFaq.html
@@ -50,7 +50,7 @@
 <p>Absolutely.</p>
 <h3 id="CanIrunapplicationslikegameswhichrequire3Dsupport">Can I run applications, like games, which require 3D support?</h3>
 <p>Those won’t fly. We do not provide OpenGL virtualization for AppVMs. This is mostly a security decision, as implementing such a feature would most likely introduce a great deal of complexity into the GUI virtualization infrastructure. However, Qubes does allow for the use of accelerated graphics (OpenGL) in Dom0’s Window Manager, so all the fancy desktop effects should still work.</p>
-<p>For further discussion about the potential for GPU passthorugh on <a href="/wiki/wiki/Xen/Qubes">Xen/Qubes?</a>, please see the following threads:</p>
+<p>For further discussion about the potential for GPU passthorugh on Xen/Qubes, please see the following threads:</p>
 <ul>
 <li><a href="https://groups.google.com/group/qubes-devel/browse_frm/thread/31f1f2da39978573?scoring=d&amp;q=GPU&amp;">​GPU passing to HVM</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/browse_frm/thread/31e2d8a47c8b4474?scoring=d&amp;q=GPU&amp;">​Clarifications on GPU security</a></li>
