--- a/UserFaq.html
+++ b/UserFaq.html
@@ -1,4 +1,4 @@
-<h1 id="QubesUsersFAQ">Qubes User's FAQ</h1>
+<h1 id="QubesUsersFAQ">Qubes Users' FAQ</h1>
 <p></p>
 <ol>
 <li><a href="#GeneralQuestions">General Questions</a>
