--- a/QubesDocs.html
+++ b/QubesDocs.html
@@ -1,20 +1,21 @@
 <h1 id="QubesDocumentation">Qubes Documentation</h1>
 <h2 id="ForUsers">For Users</h2>
 <ul>
-<li><strong><a href="/wiki/wiki/UserDoc">User guides</a></strong> &lt;--- You probably want to start here!</li>
-<li><a href="/wiki/wiki/QubesDownloads">Installation guides</a></li>
-<li><a href="/wiki/wiki/UserFaq">User FAQ</a></li>
+<li><strong><a href="/wiki/wiki/UserDoc">User Guides</a></strong><code>   </code><strong>(New to Qubes? Start here!)</strong></li>
+<li><a href="/wiki/wiki/UserFaq">Users' FAQ</a></li>
+<li><a href="/wiki/wiki/SystemRequirements">System Requirements</a></li>
+<li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
+<li><a href="/wiki/wiki/VerifyingSignatures">On Digital Signatures and How to Verify Qubes Downloads</a></li>
+<li><a href="/wiki/wiki/QubesDownloads">Installation Guides</a></li>
 </ul>
 <h2 id="ForDevelopers">For Developers</h2>
 <ul>
-<li><a href="/wiki/wiki/SystemDoc">Qubes Developer Documentation</a></li>
-<li><a href="/wiki/wiki/IdeasIncubator">Ideas Incubator?</a></li>
+<li><a href="/wiki/wiki/SystemDoc">Developer Documentation</a></li>
+<li><a href="/wiki/wiki/DevelFaq">Developers' FAQ</a></li>
+<li><a href="/wiki/wiki/ContributingHowto">How can I contribute to the Qubes project?</a></li>
 <li><a href="/wiki/wiki/SourceCode">Source Code</a></li>
-<li><a href="/wiki/wiki/DevelFaq">Developer's FAQ</a></li>
-</ul>
-<ul>
-<li><a href="/wiki/wiki/ContributingHowto">How can I contribute to the Qubes Project?</a></li>
-<li><a href="/wiki/wiki/CodingStyle">Qubes Coding Guidelines</a></li>
+<li><a href="/wiki/wiki/CodingStyle">Coding Guidelines</a></li>
+<li><a href="/wiki/wiki/IdeasIncubator">Idea Incubator?</a></li>
 <li><a href="/wiki/wiki/DevelBooks">Books for Developers</a></li>
-<li><a href="/wiki/wiki/QubesResearch">Research papers related to Qubes</a></li>
+<li><a href="/wiki/wiki/QubesResearch">Research Papers</a></li>
 </ul>
