--- a/QubesDocs.html
+++ b/QubesDocs.html
@@ -1,7 +1,7 @@
 <h1 id="QubesDocumentation">Qubes Documentation</h1>
 <h2 id="ForUsers">For Users</h2>
 <ul>
-<li><strong><a href="/wiki/wiki/UserDoc">User Guides</a></strong><code>   </code><strong>(New to Qubes? Start here!)</strong></li>
+<li><strong><a href="/wiki/wiki/UserDoc">User Guides</a> (New to Qubes? Start here!)</strong></li>
 <li><a href="/wiki/wiki/UserFaq">Users' FAQ</a></li>
 <li><a href="/wiki/wiki/SystemRequirements">System Requirements</a></li>
 <li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
