--- a/UserDoc.html
+++ b/UserDoc.html
@@ -28,7 +28,7 @@
 <li><a href="/wiki/wiki/UserDoc/DispVMCustomization">DispVM Customization</a></li>
 <li><a href="/wiki/wiki/LinuxHVMTips">Tips for using Linux in HVM</a></li>
 <li><a href="/wiki/wiki/FullScreenMode">Enabling Fullscreen mode for AppVMs</a></li>
-<li><a href="/wiki/wiki/Using">OpenPGP in Qubes?</a></li>
+<li><a href="/wiki/wiki/UserDoc/OpenPGP">Using OpenPGP in Qubes</a></li>
 </ul>
 <p>Command-line tools reference:</p>
 <ul>
