--- a/QubesArchitecture.html
+++ b/QubesArchitecture.html
@@ -1,17 +1,17 @@
 <h1 id="QubesArchitectureOverview">Qubes Architecture Overview</h1>
-<p>Qubes implements Security by Isolation approach. To do this, Qubes utilizes virtualization technology, to be able to isolate various programs from each other, and even sandbox many system-level components, like networking or storage subsystem, so that their compromise don’t affect the integrity of the rest of the system.</p>
-<p>Qubes lets the user define many security domains implemented as lightweight Virtual Machines (VMs), or “AppVMs”. E.g. user can have “personal”, “work”, “shopping”, “bank”, and “random” AppVMs and can use the applications from within those VMs just like if they were executing on the local machine, but at the same time they are well isolated from each other. Qubes supports secure copy-and-paste and file sharing between the AppVMs, of course.</p>
+<p>Qubes implements a Security by Isolation approach. To do this, Qubes utilizes virtualization technology in order to isolate various programs from each other and even to sandbox many system-level components, such as networking and storage subsystems, so that the compromise of any of these programs or components does not affect the integrity of the rest of the system.</p>
+<p>Qubes lets the user define many security domains, which are implemented as lightweight Virtual Machines (VMs), or “AppVMs.” For example, the user can have “personal,” “work,” “shopping,” “bank,” and “random” AppVMs and can use the applications within those VMs just as if they were executing on the local machine. At the same time, however, these applications are well isolated from each other. Qubes also supports secure copy-and-paste and file sharing between the AppVMs, of course.</p>
 <p><a href="http://files.qubes-os.org/Architecture_files/droppedImage.png"><img src="http://files.qubes-os.org/Architecture_files/droppedImage.png" title="http://files.qubes-os.org/Architecture_files/droppedImage.png" alt="http://files.qubes-os.org/Architecture_files/droppedImage.png" /></a></p>
-<p>(Note: In the diagram above, the &quot;Storage Domain&quot; is actually a USB Domain)</p>
+<p>(Note: In the diagram above, &quot;Storage domain&quot; is actually a USB domain.)</p>
 <h2 id="KeyArchitecturefeatures">Key Architecture features</h2>
 <ul>
 <li>Based on a secure bare-metal hypervisor (Xen)</li>
 <li>Networking code sand-boxed in an unprivileged VM (using IOMMU/VT-d)</li>
 <li>USB stacks and drivers sand-boxed in an unprivileged VM (currently experimental feature)</li>
 <li>No networking code in the privileged domain (dom0)</li>
-<li>All user applications run in “AppVMs”, lightweight VMs based on Linux</li>
+<li>All user applications run in “AppVMs,” lightweight VMs based on Linux</li>
 <li>Centralized updates of all AppVMs based on the same template</li>
-<li>Qubes GUI virtualization presents applications like if they were running locally</li>
+<li>Qubes GUI virtualization presents applications as if they were running locally</li>
 <li>Qubes GUI provides isolation between apps sharing the same desktop</li>
 <li>Secure system boot based (optional)</li>
 </ul>
