--- a/UserFaq.html
+++ b/UserFaq.html
@@ -28,6 +28,8 @@
 <li><a href="#CommonProblems">Common Problems</a>
 <ol>
 <li><a href="#MyAppVMslostInternetaccessafteraTemplateVMupdate.WhatshouldIdo">My AppVMs lost Internet access after a TemplateVM update. What should I do?</a></li>
+<li><a href="#Mykeyboardlayoutsettingsarenotbehavingcorrectly.WhatshouldIdo">My keyboard layout settings are not behaving correctly. What should I do?</a></li>
+<li><a href="#Mydom0andorTemplateVMupdatestallswhenattemptingtoupdateviatheGUItool.WhatshouldIdo">My dom0 and/or TemplateVM update stalls when attempting to update via …</a></li>
 </ol></li>
 </ol>
 <p></p>
@@ -78,3 +80,9 @@
 <h2 id="CommonProblems">Common Problems</h2>
 <h3 id="MyAppVMslostInternetaccessafteraTemplateVMupdate.WhatshouldIdo">My AppVMs lost Internet access after a TemplateVM update. What should I do?</h3>
 <p>Run <code>systemctl enable NetworkManager-dispatcher.service</code> in the TemplateVM upon which your NetVM is based. You may have to reboot afterward for the change to take effect. (Note: This is an upstream problem. See <a href="https://bugzilla.redhat.com/show_bug.cgi?id=974811">​here</a>. For details, see the qubes-users mailing list threads <a href="https://groups.google.com/d/topic/qubes-users/xPLGsAJiDW4/discussion">​here</a> and <a href="https://groups.google.com/d/topic/qubes-users/uN9G8hjKrGI/discussion">​here</a>.)</p>
+<h3 id="Mykeyboardlayoutsettingsarenotbehavingcorrectly.WhatshouldIdo">My keyboard layout settings are not behaving correctly. What should I do?</h3>
+<p>Please read <a href="https://groups.google.com/d/topic/qubes-devel/d8ZQ_62asKI/discussion">​this disccusion</a>.</p>
+<h3 id="Mydom0andorTemplateVMupdatestallswhenattemptingtoupdateviatheGUItool.WhatshouldIdo">My dom0 and/or TemplateVM update stalls when attempting to update via the GUI tool. What should I do?</h3>
+<p>This can usually be fixed by updating via the command line.</p>
+<p>In dom0, open a terminal and run <code>sudo qubes-dom0-update</code>.</p>
+<p>In your TemplateVMs, open a terminal and run <code>sudo yum upgrade</code>.</p>
