--- a/HCL.html
+++ b/HCL.html
@@ -256,6 +256,12 @@
 <p>OK</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/V4PQYEBuoSg/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/V4PQYEBuoSg/udLCHyR6RUUJ">cprise</a></p>
+<p>Lenovo X1 Carbon (LENOVO 3444CTO)<br /> (i5-3427U)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/UCuF41rq758/discussion">read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/UCuF41rq758/BRhc7lTecsMJ">Ulrich Pfeifer</a></p>
 <h2 id="GeneratingandSubmittingNewReports">Generating and Submitting New Reports</h2>
 <p>In order to generate an HCL report in Qubes, simply open a terminal in dom0 and run <code>qubes-hcl-report &lt;vm-name&gt;</code>, where <code>&lt;vm-name&gt;</code> is the name of the VM to which the generated HCL files will be saved. (Note: If you are working with a new Qubes installation, you may need to update your system in order to download this script.)</p>
 <p>Users are encouraged to submit their HCL reports for the benefit of further Qubes development and other users. If you would like to submit your HCL report, please send the <strong>HCL Info</strong> <code>.txt</code> file to <code>qubes-users@googlegroups.com</code> (see <a href="/wiki/wiki/QubesLists">here</a> information about the mailing lists) with the subject <code>HCL - &lt;your machine model name&gt;</code>. Please feel free to include any useful information about any Qubes features you may have tested, as well as general machine compatibility (video, networking, sleep, etc.). If you have problems with your hardware, please send the <strong>HCL Support Files</strong> <code>.cpio.gz</code> file as well.</p>
