--- a/HCL.html
+++ b/HCL.html
@@ -10,6 +10,7 @@
 <p>VT-x<br />(HVM)</p>
 <p>VT-d</p>
 <p>Remarks</p>
+<p><strong>Developer Reported Machines</strong></p>
 <p>Lenovo Thinkpad T420</p>
 <p>OK</p>
 <p>OK</p>
@@ -48,6 +49,7 @@
 <p>OK</p>
 <p>Suspend doesn't work on 3.7.6 kernel, but work on 3.7.4</p>
 <p>Qubes core developers</p>
+<p><strong>User Reported Laptops</strong></p>
 <p>Apple MacBookPro<br /> (i7 M620)</p>
 <p>?</p>
 <p>?</p>
@@ -213,6 +215,7 @@
 <p>OK</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/uKI-VBtKWxg/uKjsdGNSpSQJ">​Ant</a></p>
+<p><strong>User Reported Desktops and Custom Built Machines</strong></p>
 <p>ASRock Z77 Pro4<br /> (Ivy Bridge; Xeon E3-1200 Graphics; i7-3770; BIOS: P1.40)</p>
 <p>OK</p>
 <p>OK</p>
