--- a/HCL.html
+++ b/HCL.html
@@ -165,6 +165,12 @@
 <p>OK</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/LSVluAZ9Udo/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/LSVluAZ9Udo/Fl3jmt4tWssJ">Alex Dubois</a></p>
+<p>Lenovo Thinkpad T430s<br /> (i5-3320M)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/V4PQYEBuoSg/discussion">read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/V4PQYEBuoSg/udLCHyR6RUUJ">cprise</a></p>
 <p>Lenovo Thinkpad T430U<br /> (Ivy Bridge; HD Graphics +GT 620M; i7-3517M; BIOS: 2.08)</p>
 <p>?</p>
 <p>?</p>
@@ -178,6 +184,12 @@
 <p>OK</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​read more</a></p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​Sebastian Hültenschmidt</a></p>
+<p>Lenovo Thinkpad X1 Carbon (LENOVO 3444CTO)<br /> (i5-3427U)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/UCuF41rq758/discussion">read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/UCuF41rq758/BRhc7lTecsMJ">Ulrich Pfeifer</a></p>
 <p>Lenovo Thinkpad x220<br /> (HD?000; i5-?)</p>
 <p>OK</p>
 <p>OK</p>
@@ -260,18 +272,6 @@
 <p>X</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/V9BLpdf4xCs/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/V9BLpdf4xCs/v4XcOjLT6uUJ">Qubes Fan</a></p>
-<p>Lenovo Thinkpad T430s<br /> (i5-3320M)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/V4PQYEBuoSg/discussion">read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/V4PQYEBuoSg/udLCHyR6RUUJ">cprise</a></p>
-<p>Lenovo X1 Carbon (LENOVO 3444CTO)<br /> (i5-3427U)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/UCuF41rq758/discussion">read more</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-users/UCuF41rq758/BRhc7lTecsMJ">Ulrich Pfeifer</a></p>
 <h2 id="GeneratingandSubmittingNewReports">Generating and Submitting New Reports</h2>
 <p>In order to generate an HCL report in Qubes, simply open a terminal in dom0 and run <code>qubes-hcl-report &lt;vm-name&gt;</code>, where <code>&lt;vm-name&gt;</code> is the name of the VM to which the generated HCL files will be saved. (Note: If you are working with a new Qubes installation, you may need to update your system in order to download this script.)</p>
 <p>Users are encouraged to submit their HCL reports for the benefit of further Qubes development and other users. If you would like to submit your HCL report, please send the <strong>HCL Info</strong> <code>.txt</code> file to <code>qubes-users@googlegroups.com</code> (see <a href="/wiki/wiki/QubesLists">here</a> information about the mailing lists) with the subject <code>HCL - &lt;your machine model name&gt;</code>. Please include any useful information about any Qubes features you may have tested (see the legend above), as well as general machine compatibility (video, networking, sleep, etc.). If you have problems with your hardware, please send the <strong>HCL Support Files</strong> <code>.cpio.gz</code> file as well.</p>
