--- a/HCL.html
+++ b/HCL.html
@@ -1,10 +1,10 @@
 <h1 id="HardwareCompatibilityListHCLforAllQubesOSReleases">Hardware Compatibility List (HCL) for All Qubes OS Releases</h1>
 <p><strong>Legend</strong></p>
 <ul>
-<li>Green: The reporter has clearly stated that <strong>all</strong> components and features are working correctly.</li>
-<li>White: The reporter has sent an HCL Info output which indicates everything is OK without any comments.</li>
-<li>Yellow: Some non-required feature is missing (e.g., VT-d), or manual tweaking is required in order to get some components to work.</li>
-<li>Red: Some primary feature is not working. These are usually machines with poor or nonexistent Linux support in general.</li>
+<li><strong>Green</strong>: The reporter has clearly stated that <strong>all</strong> components and features are working correctly.</li>
+<li><strong>White</strong>: The reporter has sent an HCL Info output which indicates everything is OK without any comments.</li>
+<li><strong>Yellow</strong>: Some non-required feature is missing (e.g., VT-d), or manual tweaking is required in order to get some components to work.</li>
+<li><strong>Red</strong>: Some primary feature is not working. These are usually machines with poor or nonexistent Linux support in general.</li>
 </ul>
 <p><strong>Device</strong></p>
 <p><strong>Qubes R1</strong></p>
@@ -187,8 +187,6 @@
 <p>Lenovo Thinkpad X1 Carbon (LENOVO 3444CTO)<br /> (i5-3427U)</p>
 <p>OK</p>
 <p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/d/topic/qubes-users/UCuF41rq758/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/UCuF41rq758/BRhc7lTecsMJ">Ulrich Pfeifer</a></p>
 <p>Lenovo Thinkpad x220<br /> (HD?000; i5-?)</p>
 <p>OK</p>
