--- a/HCL.html
+++ b/HCL.html
@@ -232,7 +232,7 @@
 <p>OK</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/uKI-VBtKWxg/uKjsdGNSpSQJ">​Ant</a></p>
-<p><strong>User Reported Desktops and Custom Built Machines</strong></p>
+<p><strong>User Reported Desktops and Workstations</strong></p>
 <p>ASRock Z77 Pro4<br /> (Ivy Bridge; Xeon E3-1200 Graphics; i7-3770; BIOS: P1.40)</p>
 <p>OK</p>
 <p>OK</p>
