--- a/HCL.html
+++ b/HCL.html
@@ -5,6 +5,10 @@
 <li><strong>White</strong>: The reporter has sent an HCL Info output which indicates everything is OK without any comments.</li>
 <li><strong>Yellow</strong>: Some non-required feature is missing (e.g., VT-d), or manual tweaking is required in order to get some components to work.</li>
 <li><strong>Red</strong>: Some primary feature is not working. These are usually machines with poor or nonexistent Linux support in general.</li>
+<li><strong>OK</strong>: The feature is working correctly.</li>
+<li><strong>X</strong>: The feature does not work or is not present.</li>
+<li>An asterisk (*) indicates that some kind of tweaking is needed.</li>
+<li>A blank cell indicates that we lack information about a feature.</li>
 </ul>
 <p><strong>Device</strong></p>
 <p><strong>Qubes R1</strong></p>
@@ -58,16 +62,12 @@
 <p>Qubes core developers</p>
 <p><strong>User Reported Laptops</strong></p>
 <p>Apple MacBookPro<br /> (i7 M620)</p>
-<p>?</p>
-<p>?</p>
 <p>X</p>
 <p>OK</p>
 <p>X</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/hag-MQDH_Vs/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/hag-MQDH_Vs/pmJ7TIWUWAsJ">​Alex Dubois</a></p>
 <p>Apple MacBookPro<br /> (Intel HD Graphics, Ivy Bridge, i5-3210M)</p>
-<p>?</p>
-<p>?</p>
 <p>X</p>
 <p>OK</p>
 <p>OK</p>
@@ -75,7 +75,6 @@
 <p><a href="https://groups.google.com/d/msg/qubes-users/ZbjrseLxuPQ/5Jx5DvpnwMMJ">​ph145h</a></p>
 <p>ASUS UX-31</p>
 <p>*</p>
-<p>?</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/6I07Bbzn5M4/discussion">​Stephen Boyd</a></p>
 <p>ASUS X55A</p>
 <p>X</p>
@@ -123,10 +122,7 @@
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/ddf35d12a35f96a3">​nqe</a></p>
 <p>Dell XPS 13<br /> (i5; intel HD; sandy bridge; BIOS A03)</p>
 <p>OK</p>
-<p>?</p>
 <p>OK</p>
-<p>?</p>
-<p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/jamRkZJDC0g/KTniY0Y3dioJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/7JumqdldVJM/n9TiDVxc2jkJ">​j</a></p>
 <p>Dell XPS 13 (L322X)<br /> (i7-3537U; intel HD; Ivy Bridge; BIOS A09)</p>
@@ -144,22 +140,16 @@
 <p>needs kernel downgrade to 3.7.4</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
 <p>HP Pavilion Sleekbook 14-B030TU<br /> (Ivy Bridge; Intel HD Graphics; i5-3317; BIOS F.06)</p>
-<p>?</p>
-<p>?</p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">Stephen Boyd</a></p>
 <p>Lenovo Thinkpad Edge E130<br /> (Ivy Bridge; HD Graphics i3-3217U; BIOS: 2.05)</p>
-<p>?</p>
-<p>?</p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/kGnZKZ9ILKA/2vpzltNW3K4J">Danny Cautaert</a></p>
 <p>Lenovo Thinkpad T430<br /> (Ivy Bridge; HD Graphics; i5-3360M; BIOS: 2.51)</p>
-<p>?</p>
-<p>?</p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
@@ -172,8 +162,6 @@
 <p><a href="https://groups.google.com/d/topic/qubes-users/V4PQYEBuoSg/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/V4PQYEBuoSg/udLCHyR6RUUJ">cprise</a></p>
 <p>Lenovo Thinkpad T430U<br /> (Ivy Bridge; HD Graphics +GT 620M; i7-3517M; BIOS: 2.08)</p>
-<p>?</p>
-<p>?</p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
@@ -216,7 +204,6 @@
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/66e97c990a08d8e2">​Franz</a></p>
 <p>Samsung Series 7 Chronos NP700Z5C<br /> (nVidia Optimus; i7-3635QM; BIOS P04ABJ)</p>
 <p>OK</p>
-<p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/0xBeX8NZFiU/bUqxGdn6KOMJ">​read more</a></p>
 <p>OK</p>
 <p>OK</p>
@@ -240,25 +227,17 @@
 <p><a href="https://groups.google.com/d/topic/qubes-users/lycnE-LcJBo/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/lycnE-LcJBo/0u10xl7AMrIJ">gorka</a></p>
 <p>Dell Precision T3400 Workstation<br /> (NVIDIA Quadro NVS 290; Intel Q6600; BIOS: A09)</p>
-<p>?</p>
-<p>?</p>
 <p>OK</p>
 <p>OK</p>
 <p>X</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/D16dM3rg8Iw/zOEZmjTJkRIJ">Andrew Sorensen</a></p>
 <p>GA-fxa990-ud3 (rev 3.0)<br /> (AMD FX-8350; GTX 470)</p>
-<p>?</p>
-<p>?</p>
 <p>OK</p>
 <p>OK</p>
 <p>X</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/oox94EsIduQ/7w4xUoK5pxwJ">m astroj</a></p>
 <p>MSI Big Bang<br /> (i7-950; Radeon HD 6770)</p>
-<p>?</p>
-<p>?</p>
 <p>OK</p>
-<p>?</p>
-<p>?</p>
 <p><a href="https://groups.google.com/d/topic/qubes-devel/TxzaoodB02o/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/TxzaoodB02o/NxVHjaPoRYoJ">Andrew Sorensen</a></p>
 <p>Supermicro X10SAE<br /> (Haswell; Radeon HD 5700; Xeon E3-1245; BIOS: 1.0)</p>
