--- a/HCL.html
+++ b/HCL.html
@@ -226,6 +226,12 @@
 <p>OK</p>
 <p><a href="https://groups.google.com/d/topic/qubes-users/lycnE-LcJBo/discussion">read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-users/lycnE-LcJBo/0u10xl7AMrIJ">gorka</a></p>
+<p>Dell Inspiron 660<br /> (Xeon E3-1200 Graphics; i5-3330; BIOS: A09)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/topic/qubes-users/Nq7T0l4A2b0/discussion">read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-users/Nq7T0l4A2b0/IP_pwZMn9LYJ">KR</a></p>
 <p>Dell Precision T3400 Workstation<br /> (NVIDIA Quadro NVS 290; Intel Q6600; BIOS: A09)</p>
 <p>OK</p>
 <p>OK</p>
