--- a/GUIdocs.html
+++ b/GUIdocs.html
@@ -69,6 +69,12 @@
 <pre class="wiki"><code>struct msghdr {   
         uint32_t type;
         uint32_t window;
+        /* This field is intended for use by gui_agents to skip unknown
+         * messages from the (trusted) guid. Guid, on the other hand,
+         * should never rely on this field to calculate the actual len of
+         * message to be read, as the (untrusted) agent can put here
+         * whatever it wants! */
+        uint32_t untrusted_len;
 };</code></pre>
 <p>The header is followed by message-specific data.</p>
 <table>
