--- a/UserDoc.html
+++ b/UserDoc.html
@@ -47,4 +47,5 @@
 <li><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/5252bc3f6ed4b43e/d881deb5afaa2a6c#39c95d63fccca12b">​HTTP filtering proxy in Qubes firewall VM</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/b8b0d819d2a4fc39/d50a72449107ab21#8a9268c09d105e69">​Solving problems with Macbook Air 2012</a></li>
 <li><a href="/wiki/wiki/NetworkBridgeSupport">Adding Bridge Support to the NetVM (EXPERIMENTAL)</a></li>
+<li><a href="/wiki/wiki/ExternalDeviceMountPoint">Where are my external storage devices mounted?</a></li>
 </ul>
