--- a/ExternalDeviceMountPoint.html
+++ b/ExternalDeviceMountPoint.html
@@ -1,2 +1,3 @@
 <p>All external storage devices connected to an AppVM using the Fedora template can be found under</p>
 <pre class="wiki"><code>/run/media/user/</code></pre>
+<p>...of that AppVM's filesystem.</p>
