--- a/HCL.html
+++ b/HCL.html
@@ -1,15 +1,26 @@
 <h1 id="HardwareCompatibilityListHCLforAllQubesOSReleases">Hardware Compatibility List (HCL) for All Qubes OS Releases</h1>
 <p><strong>Legend</strong></p>
-<ul>
-<li><strong>Green</strong>: The reporter has clearly stated that <strong>all</strong> components and features are working correctly.</li>
-<li><strong>White</strong>: The reporter has sent an HCL Info output which indicates everything is OK without any comments.</li>
-<li><strong>Yellow</strong>: Some non-required feature is missing (e.g., VT-d), or manual tweaking is required in order to get some components to work.</li>
-<li><strong>Red</strong>: Some primary feature is not working. These are usually machines with poor or nonexistent Linux support in general.</li>
-<li><strong>OK</strong>: The feature is working correctly.</li>
-<li><strong>X</strong>: The feature does not work or is not present.</li>
-<li>An asterisk (*) indicates that some kind of tweaking is needed.</li>
-<li>A blank cell indicates that we lack information about a feature.</li>
-</ul>
+<p><strong>Background colors</strong></p>
+<p>Green</p>
+<p>The reporter has clearly stated that <strong>all</strong> components and features are working correctly.</p>
+<p>White</p>
+<p>The reporter has sent an HCL Info output which indicates everything is OK without any comments.</p>
+<p>Yellow</p>
+<p>Some non-required feature is missing (e.g., VT-d), or manual tweaking is required in order to get some components to work.</p>
+<p>Red</p>
+<p>Some primary feature is not working. These are usually machines with poor or nonexistent Linux support in general.</p>
+<p><strong>Marks</strong></p>
+<p>OK</p>
+<p>The feature is working correctly.</p>
+<p>X</p>
+<p>The feature does not work or is not present.</p>
+<p>*</p>
+<p>An asterisk (*) indicates that some kind of tweaking is needed.</p>
+<p> </p>
+<p>A blank cell indicates that we lack information about a feature.</p>
+<p></p>
+<p></p>
+<p></p>
 <p><strong>Device</strong></p>
 <p><strong>Qubes R1</strong></p>
 <p><strong>Qubes R2 Beta2</strong></p>
