--- a/QubesFirewall.html
+++ b/QubesFirewall.html
@@ -11,6 +11,11 @@
 <p><a href="/wiki/attachment/wiki/QubesFirewall/r2b1-manager-firewall.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;r2b1-manager-firewall.png&quot; attached to QubesFirewall" alt="No image &quot;r2b1-manager-firewall.png&quot; attached to QubesFirewall" /></a></p>
 <p>Note that if you specify a rule by DNS name it will be resolved to IP(s) <em>at the moment of applying the rules</em>, and not on the fly for each new connection. This means it will not work for serves using load balancing. More on this in the message quoted below.</p>
 <p>Alternatively, one can use the <code>qvm-firewall</code> command from Dom0 to edit the firewall rules by hand:</p>
+<h2 id="ReconnectingAppVMsafteraNetVMreboot">Reconnecting AppVMs after a NetVM reboot</h2>
+<p>Normally Qubes doesn't let the user to stop a NetVM if there are other AppVMs running which use it as their own NetVM. But in case the NetVM stops for whatever reason (e.g. it crashes, or the user forces its shutdown via qvm-kill via terminal in the netvm), then there is an easy way to restore the connection to the netvm by issuing:</p>
+<pre class="wiki"><code>qvm-prefs &lt;appvm&gt; -s netvm &lt;netvm&gt;</code></pre>
+<p>Normally AppVMs do not connect directly to the actual NetVM which has networking devices, but rather to the default FirewallVM first, and in most cases it would be the NetVM that would crash, e.g. in response to S3 sleep/restore or other issues with <a href="/wiki/wiki/WiFi">WiFi?</a> drivers. In that case it is necessary to just issue the above command once, for the FirewallVM (this assumes default VM-nameing used by the default Qubes installation):</p>
+<pre class="wiki"><code>qvm-prefs firewallvm -s netvm netvm</code></pre>
 <h2 id="EnablingnetworkingbetweentwoAppVMs">Enabling networking between two AppVMs</h2>
 <p>Normally any networking traffic between VMs is prohibited for security reasons. However, in special situations, one might one to selectively allow specific AppVMs to be able to establish networking connectivity between each other. For example, this might come useful in some development work, when one wants to test networking code, or to allow file exchange between HVM domains (which do not have Qubes tools installed) via SMB/scp/NFS protocols.</p>
 <p>In order to allow networking between AppVM A and B follow those steps:</p>
