--- a/QubesLists.html
+++ b/QubesLists.html
@@ -1,5 +1,22 @@
 <h1 id="QubesMailingLists">Qubes Mailing Lists</h1>
 <p>Please send all the questions regarding Qubes to one of the following mailing lists. <strong>Please do not send questions to individual Qubes developers.</strong> By sending a message to the appropriate mailing list, you are not only giving others a chance to help you, but you may also be helping others by starting a public discussion about a shared problem or interest.</p>
+<h2 id="GeneralPostingAdvice">General Posting Advice</h2>
+<ul>
+<li>Include a precise and informative subject line. This will allow others to easily find your thread in the future and use it as a reference.
+<ul>
+<li>Example of a bad subject: &quot;Help! Qubes problems!&quot;</li>
+<li>Example of a good subject: &quot;R2B2 Installation problem: Apple keyboard not working in installer.&quot;</li>
+</ul></li>
+</ul>
+<ul>
+<li>Be concise. Do not write an essay. Include only the essential information. Please think how many messages come to the list every day and whether people will want to read through your lengthy message (hint: they won't!)</li>
+</ul>
+<ul>
+<li>Do not apologize for your English. This is a waste of everyone's time, including your own. If we can't understand you, we will ask you to clarify (or ignore your message if it's a total mess ;).</li>
+</ul>
+<ul>
+<li>While we're generally open to hearing suggestions for new features, please note that we already have a pretty well defined <a href="/wiki/trac/roadmap">roadmap</a>, and it's rather unlikely that we will change our schedule in order to accommodate your request. If there's a particular feature you'd like to see in Qubes, a much more effective way to make it happen is to... contribute code to Qubes which implements it! We happily accept such contributions, provided they meet our standards. Please note, however, that it's always a good idea to field a discussion of your idea on the qubes-devel list before putting in a lot of hard work on something that we may not be able or willing to accept.</li>
+</ul>
 <h2 id="Thequbes-usersMailingList">The <code>qubes-users</code> Mailing List</h2>
 <h3 id="HowtoUseThisList">How to Use This List</h3>
 <p>This list is for helping users solve various daily problems with Qubes OS. Examples of topics or questions suitable for this list include:</p>
@@ -47,21 +64,4 @@
 <ul>
 <li>Some users prefer to interact with the mailing list through the Google Groups web interface. This has the advantage that it allows you to search and reply to messages which were sent prior to your subscription to the list. However, a Google account is required in order to post through this interface.</li>
 </ul></li>
-</ul>
-<h2 id="GeneralPostingAdvice">General Posting Advice</h2>
-<ul>
-<li>Include a precise and informative subject line. This will allow others to easily find your thread in the future and use it as a reference.
-<ul>
-<li>Example of a bad subject: &quot;Help! Qubes problems!&quot;</li>
-<li>Example of a good subject: &quot;R2B2 Installation problem: Apple keyboard not working in installer.&quot;</li>
-</ul></li>
-</ul>
-<ul>
-<li>Be concise. Do not write an essay. Include only the essential information. Qubes developers are Very Busy People (VBP), and we'd really rather spend our time improving Qubes than reading essays!</li>
-</ul>
-<ul>
-<li>Do not apologize for your English. This is a waste of everyone's time, including your own. If we can't understand you, we will ask you to clarify (or ignore your message if it's a total mess ;).</li>
-</ul>
-<ul>
-<li>While we're generally open to hearing suggestions for new features, please note that we already have a pretty well defined <a href="/wiki/trac/roadmap">roadmap</a>, and it's rather unlikely that we will change our schedule in order to accommodate your request. If there's a particular feature you'd like to see in Qubes, a much more effective way to make it happen is to... contribute code to Qubes which implements it! We happily accept such contributions, provided they meet our standards. Please note, however, that it's always a good idea to field a discussion of your idea on the qubes-devel list before putting in a lot of hard work on something that we may not be able or willing to accept.</li>
 </ul>
