--- a/ResizeDiskImage.html
+++ b/ResizeDiskImage.html
@@ -1,7 +1,8 @@
 <h2 id="ResizingDiskImage">Resizing Disk Image</h2>
 <p>There are several disk images which can be easily extended. <br /> But pay attention to the overall consumed space of your sparse disk images.</p>
 <h3 id="Privatediskimage">Private disk image</h3>
-<p>The private disk image of a AppVM can be grown with <a href="/wiki/wiki/Dom0Tools/QvmGrowPrivate">qubes-grow-private</a>:</p>
+<p>1048576 MB is the maximum size which can be assigned to a private storage through qubes-manager. <br /></p>
+<p>To grow the private disk image of a AppVM beyond this limit <a href="/wiki/wiki/Dom0Tools/QvmGrowPrivate">qubes-grow-private</a> can be used:</p>
 <pre class="wiki"><code>qvm-grow-private &lt;vm-name&gt; &lt;size&gt;</code></pre>
 <h3 id="HVMdiskimage">HVM disk image</h3>
 <p>In this example we will grow the disk image of an HVM to 30GB.</p>
