--- a/Donations.html
+++ b/Donations.html
@@ -2,7 +2,7 @@
 <p>The Qubes project is now accepting donations in Bitcoins. You can use the following address to send Bitcoins to the project (but you might want to read the short FAQ below first):</p>
 <pre class="wiki"><code>14zockMSKKp5MK6X2cHJ3mQwm9MwYsJ39j</code></pre>
 <p>This address can also be found in a message posted to Qubes mailing list, which can be viewed via Google Groups Web interface over SSL <a href="https://groups.google.com/d/msg/qubes-devel/u3wAzm1dB5Y/s5CiUGDebL4J">​here</a>, for double verification. For additional verification, you can verify the digital signature on the message, which should come from Joanna Rutkowska.</p>
-<p>You can check how much others have donated already (over the entire time) via <a href="https://blockexplorer.com/address/14zockMSKKp5MK6X2cHJ3mQwm9MwYsJ39j">​blockexplorer</a> and <a href="https://blockchain.info/fb/14zock">​blockchain</a>.</p>
+<p>You can check how much others have donated already (over the entire time) via <a href="https://blockexplorer.com/address/14zockMSKKp5MK6X2cHJ3mQwm9MwYsJ39j">​blockexplorer</a> and <a href="https://blockchain.info/address/14zockMSKKp5MK6X2cHJ3mQwm9MwYsJ39j">​blockchain</a>.</p>
 <h2 id="FAQ">FAQ</h2>
 <h3 id="HowareyougoingtospendthedonatedBitcoins">How are you going to spend the donated Bitcoins?</h3>
 <p>Our primary intention is to fund development of additional Qubes features, such as Split GPG (#474), Qubes MIME handlers, USB PV backend, IPv6 routing between VMs, etc. Those additional features, although often very cool and appealing, are often being postponed because we need to focus on the more mainstream features, including the commercial branches for our paying customers.</p>
