--- a/UserDoc.html
+++ b/UserDoc.html
@@ -2,6 +2,7 @@
 <ul>
 <li><a href="/wiki/wiki/GettingStarted">Getting started</a></li>
 <li><a href="/wiki/wiki/HvmCreate">Creating and using HVM and Windows domains (Qubes R2 only)</a></li>
+<li><a href="/wiki/wiki/WindowsAppVms">Installing and using Windows-based AppVMs (Qubes R2 Beta 3 and later)</a></li>
 <li><a href="/wiki/wiki/CopyPaste">Copy and paste between domains</a></li>
 <li><a href="/wiki/wiki/CopyingFiles">Copying files between domains</a></li>
 <li><a href="/wiki/wiki/SoftwareUpdateVM">Updating and adding new software to AppVMs</a></li>
