--- a/BuildingArchlinuxTemplate.html
+++ b/BuildingArchlinuxTemplate.html
@@ -97,3 +97,5 @@ ls
 cp -r pulsecore-#lastversion pulsecore-#archlinuxversion</code></pre>
 <p>You can check the current archlinux pulseaudio version like this:</p>
 <pre class="wiki"><code>sudo chroot chroot-archlinux/ pacman -Qi pulseaudio</code></pre>
+<h2 id="ThesounddoesnotworkinVMsandtherearemessagesrelatedtopulsesegfaultinglibcwhenrunningdmesg">The sound does not work in VMs and there are messages related to pulse segfault in glibc when running dmesg</h2>
+<p>This is apparently a bug in Archlinux pulseaudio package 4.0-6. The packages pulseaudio-4.0-2 and libpulse-4.0-2 are known to work and can be downloaded and reinstalled manually.</p>
