--- a/QubesDocs.html
+++ b/QubesDocs.html
@@ -7,6 +7,7 @@
 <li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
 <li><a href="/wiki/wiki/VerifyingSignatures">On Digital Signatures and How to Verify Qubes Downloads</a></li>
 <li><a href="/wiki/wiki/QubesDownloads">Installation Guides</a></li>
+<li><a href="/wiki/wiki/TroubleShooting">Troubleshooting</a></li>
 </ul>
 <h2 id="ForDevelopers">For Developers</h2>
 <ul>
