--- a/OutOfmemory.html
+++ b/OutOfmemory.html
@@ -3,4 +3,4 @@
 <p>So it is a good practice to regularly check disk memory usage with command</p>
 <pre class="wiki"><code>df</code></pre>
 <p>in dom0 terminal.</p>
-<p>follows ...</p>
+<p>A system in out of memory condition should be able to boot, but may be unable to load a desktop manager. In this case it is possible to login to dom0 terminal with Alt + Ctrl + F2. To recover disk space</p>
