--- a/TroubleShooting.html
+++ b/TroubleShooting.html
@@ -1,3 +1,3 @@
 <ul>
-<li><a href="/wiki/wiki/OutOfmemory">Out of memory error</a></li>
+<li><a href="/wiki/wiki/OutOfmemory">Home directory is out of disk space error</a></li>
 </ul>
